load("@io_grpc_grpc_java//:java_grpc_library.bzl", "java_grpc_library")

_JAVA_GRPC_DEPS = [
    "@com_google_api_grpc_proto_google_common_protos//jar",
]

java_proto_library(
    name = "trillian_admin_api_java_proto",
    deps = [
        "@trillian//:trillian_admin_api_proto",
        "@trillian//:trillian_proto",
    ],
)

java_grpc_library(
    name = "trillian_admin_api_java_grpc",
    srcs = [
        "@trillian//:trillian_admin_api_proto",
    ],
    deps = [
        ":trillian_admin_api_java_proto",
    ],
)

java_binary(
    name = "AdminClient",
    srcs = ["AdminClient.java"],
    main_class = "com.github.mhutchinson.trillianj.AdminClient",
    deps = [
        ":trillian_admin_api_java_grpc",
        ":trillian_admin_api_java_proto",
        "@io_grpc_grpc_java//core",
        "@io_grpc_grpc_java//netty",
        "@io_grpc_grpc_java//protobuf",
        "@io_grpc_grpc_java//stub",
    ],
)
